kubernetes/prod/products.yaml
---
# Products microservice service
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  selector:
    matchLabels:
      app: products
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: registry.gitlab.com/gitops-project1/application-code/microservice/products:efdd380b
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: gitlab
